--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.6.0"
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.6"
 
+    //Koin
+    implementation "io.insert-koin:koin-android:2.0.1"
+
 
 
 }
