--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,8 +70,8 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.6"
 
     //Dagger
-    implementation 'com.google.dagger:dagger:2.44.2'
-    kapt 'com.google.dagger:dagger-compiler:2.44.2'
+    implementation 'com.google.dagger:dagger:2.45'
+    kapt 'com.google.dagger:dagger-compiler:2.45'
 
     //Room
     def room_version = "2.3.0-beta02"
@@ -89,5 +89,6 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
 
-
+//Remote module
+    implementation project(":remote_module")
 }
