--- a/remote_module/build.gradle
+++ b/remote_module/build.gradle
@@ -61,8 +61,9 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.6"
 
     //Dagger
-    implementation 'com.google.dagger:dagger:2.45'
-    kapt 'com.google.dagger:dagger-compiler:2.45'
+    implementation dagger
+    kapt daggerCompiler
+
 }
 
 
