BroadcastReceiver,notification + Alarm, const

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <receiver android:name=".receivers.ReminderBroadcast"/>
     </application>
 
 </manifest>
