flavor платная и бесплатная версия с ограничениями функций

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,21 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "version"
+    productFlavors {
+        free {
+            dimension "version"
+            applicationIdSuffix ".free"
+            versionNameSuffix "-free"
+        }
+        premium {
+            dimension "version"
+            applicationIdSuffix ".premium"
+            versionNameSuffix "-premium"
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -40,6 +55,13 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    buildFeatures {
+        viewBinding true
+    }
+
+
+
 }
 
 dependencies {
